Fix overflow on the wrapper

--- a/src/view/style.scss
+++ b/src/view/style.scss
@@ -28,6 +28,7 @@
 
 	.newspack-popup-wrapper {
 		background: white;
+		overflow-x: hidden;
 		position: relative;
 		z-index: 1;
 	}
